# enerplanet/backend/docs/swagger.json
@@ -80,7 +80,7 @@
                 }
             }
         },
-        "/models/{id}/heat-profiles": {
+        "/models/{id}/demand-profiles": {
             "get": {
                 "security": [
                     {
@@ -108,7 +108,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/spatialhub_backend_internal_api_contracts.ModelHeatProfilesResponse"
+                            "$ref": "#/definitions/spatialhub_backend_internal_api_contracts.ModelDemandProfilesResponse"
                         }
                     },
                     "403": {
@@ -516,7 +516,7 @@
                 }
             }
         },
-        "spatialhub_backend_internal_api_contracts.BuildingHeatProfile": {
+        "spatialhub_backend_internal_api_contracts.BuildingDemandProfile": {
             "type": "object",
             "properties": {
                 "building_type": {
@@ -930,13 +930,13 @@
                 }
             }
         },
-        "spatialhub_backend_internal_api_contracts.ModelHeatProfilesResponse": {
+        "spatialhub_backend_internal_api_contracts.ModelDemandProfilesResponse": {
             "type": "object",
             "properties": {
                 "buildings": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/spatialhub_backend_internal_api_contracts.BuildingHeatProfile"
+                        "$ref": "#/definitions/spatialhub_backend_internal_api_contracts.BuildingDemandProfile"
                     }
                 },
                 "failed": {
